# slash

./: .gitignore  README  meson.build  meson_options.txt  wscript
.github/workflows/: build.yml
include/slash/: completer.h  dflopt.h  optparse.h  slash.h
src/: builtins.c  builtins.h  completer.c  dflopt.c  optparse.c  run.c  slash.c  slash_asf.c  slash_csp.c  slash_list.c
test/: completion_tests.cpp  meson.build  slashtest.c
